# BasicRS

./: Cargo.toml  README.md  README_code.md  build.rs  run_all_tests.sh  structure.md  task_list.md
src/: basic_dialect.rs  basic_function_registry.rs  basic_functions.rs  basic_interpreter.rs  basic_keyword_registry.rs  basic_lexer.rs  basic_operators.rs  basic_parser.rs  basic_reports.rs  basic_symbols.rs  basic_types.rs  lib.rs  llvm_codegen.rs  llvm_ir_builder.rs  main.rs
tests/: run_tests.rs
